Add content to index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
   <div class="embed embed4by1">
     <img  class="embed-item" src="images/placeholder-4by1.svg" alt="">
-
+  </div>
+  <div class="embed embed4by3">
+    <img  class="embed-item" src="images/placeholder-4by3.svg" alt="">
+  </div>
+  <div class="embed embed16by9">
+    <img  class="embed-item" src="images/placeholder-16by9.svg" alt="">
   </div>
 
 </body>
